Copied some javax.swing.text.html.* classes to allow extending them without reflection and `--add-opens`